refactor: redis stream 커넥션 분리